--- a/deploy/azure/deploy.yaml
+++ b/deploy/azure/deploy.yaml
@@ -10,7 +10,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: nginx-gateway
     app.kubernetes.io/name: nginx-gateway
-    app.kubernetes.io/version: edge
+    app.kubernetes.io/version: 2.1.0
   name: nginx-gateway
   namespace: nginx-gateway
 ---
@@ -20,7 +20,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: nginx-gateway
     app.kubernetes.io/name: nginx-gateway
-    app.kubernetes.io/version: edge
+    app.kubernetes.io/version: 2.1.0
   name: nginx-gateway-cert-generator
   namespace: nginx-gateway
 ---
@@ -30,7 +30,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: nginx-gateway
     app.kubernetes.io/name: nginx-gateway
-    app.kubernetes.io/version: edge
+    app.kubernetes.io/version: 2.1.0
   name: nginx-gateway-cert-generator
   namespace: nginx-gateway
 rules:
@@ -49,7 +49,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: nginx-gateway
     app.kubernetes.io/name: nginx-gateway
-    app.kubernetes.io/version: edge
+    app.kubernetes.io/version: 2.1.0
   name: nginx-gateway
 rules:
 - apiGroups:
@@ -182,7 +182,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: nginx-gateway
     app.kubernetes.io/name: nginx-gateway
-    app.kubernetes.io/version: edge
+    app.kubernetes.io/version: 2.1.0
   name: nginx-gateway-cert-generator
   namespace: nginx-gateway
 roleRef:
@@ -200,7 +200,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: nginx-gateway
     app.kubernetes.io/name: nginx-gateway
-    app.kubernetes.io/version: edge
+    app.kubernetes.io/version: 2.1.0
   name: nginx-gateway
 roleRef:
   apiGroup: rbac.authorization.k8s.io
@@ -217,7 +217,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: nginx-gateway
     app.kubernetes.io/name: nginx-gateway
-    app.kubernetes.io/version: edge
+    app.kubernetes.io/version: 2.1.0
   name: nginx-gateway
   namespace: nginx-gateway
 spec:
@@ -237,7 +237,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: nginx-gateway
     app.kubernetes.io/name: nginx-gateway
-    app.kubernetes.io/version: edge
+    app.kubernetes.io/version: 2.1.0
   name: nginx-gateway
   namespace: nginx-gateway
 spec:
@@ -285,9 +285,9 @@ spec:
             fieldRef:
               fieldPath: metadata.labels['app.kubernetes.io/instance']
         - name: IMAGE_NAME
-          value: ghcr.io/nginx/nginx-gateway-fabric:edge
-        image: ghcr.io/nginx/nginx-gateway-fabric:edge
-        imagePullPolicy: Always
+          value: ghcr.io/nginx/nginx-gateway-fabric:2.1.0
+        image: ghcr.io/nginx/nginx-gateway-fabric:2.1.0
+        imagePullPolicy: IfNotPresent
         name: nginx-gateway
         ports:
         - containerPort: 8443
@@ -333,7 +333,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: nginx-gateway
     app.kubernetes.io/name: nginx-gateway
-    app.kubernetes.io/version: edge
+    app.kubernetes.io/version: 2.1.0
   name: nginx-gateway-cert-generator
   namespace: nginx-gateway
 spec:
@@ -353,8 +353,8 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
-        image: ghcr.io/nginx/nginx-gateway-fabric:edge
-        imagePullPolicy: Always
+        image: ghcr.io/nginx/nginx-gateway-fabric:2.1.0
+        imagePullPolicy: IfNotPresent
         name: cert-generator
         securityContext:
           allowPrivilegeEscalation: false
@@ -379,7 +379,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: nginx-gateway
     app.kubernetes.io/name: nginx-gateway
-    app.kubernetes.io/version: edge
+    app.kubernetes.io/version: 2.1.0
   name: nginx
 spec:
   controllerName: gateway.nginx.org/nginx-gateway-controller
@@ -395,7 +395,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: nginx-gateway
     app.kubernetes.io/name: nginx-gateway
-    app.kubernetes.io/version: edge
+    app.kubernetes.io/version: 2.1.0
   name: nginx-gateway-config
   namespace: nginx-gateway
 spec:
@@ -408,7 +408,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: nginx-gateway
     app.kubernetes.io/name: nginx-gateway
-    app.kubernetes.io/version: edge
+    app.kubernetes.io/version: 2.1.0
   name: nginx-gateway-proxy-config
   namespace: nginx-gateway
 spec:
@@ -416,9 +416,9 @@ spec:
     deployment:
       container:
         image:
-          pullPolicy: Always
+          pullPolicy: IfNotPresent
           repository: ghcr.io/nginx/nginx-gateway-fabric/nginx
-          tag: edge
+          tag: 2.1.0
       pod:
         nodeSelector:
           kubernetes.io/os: linux
