--- a/deploy/experimental/deploy.yaml
+++ b/deploy/experimental/deploy.yaml
@@ -10,7 +10,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: nginx-gateway
     app.kubernetes.io/name: nginx-gateway
-    app.kubernetes.io/version: edge
+    app.kubernetes.io/version: 2.1.0
   name: nginx-gateway
   namespace: nginx-gateway
 ---
@@ -20,7 +20,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: nginx-gateway
     app.kubernetes.io/name: nginx-gateway
-    app.kubernetes.io/version: edge
+    app.kubernetes.io/version: 2.1.0
   name: nginx-gateway-cert-generator
   namespace: nginx-gateway
 ---
@@ -30,7 +30,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: nginx-gateway
     app.kubernetes.io/name: nginx-gateway
-    app.kubernetes.io/version: edge
+    app.kubernetes.io/version: 2.1.0
   name: nginx-gateway-cert-generator
   namespace: nginx-gateway
 rules:
@@ -49,7 +49,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: nginx-gateway
     app.kubernetes.io/name: nginx-gateway
-    app.kubernetes.io/version: edge
+    app.kubernetes.io/version: 2.1.0
   name: nginx-gateway
 rules:
 - apiGroups:
@@ -186,7 +186,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: nginx-gateway
     app.kubernetes.io/name: nginx-gateway
-    app.kubernetes.io/version: edge
+    app.kubernetes.io/version: 2.1.0
   name: nginx-gateway-cert-generator
   namespace: nginx-gateway
 roleRef:
@@ -204,7 +204,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: nginx-gateway
     app.kubernetes.io/name: nginx-gateway
-    app.kubernetes.io/version: edge
+    app.kubernetes.io/version: 2.1.0
   name: nginx-gateway
 roleRef:
   apiGroup: rbac.authorization.k8s.io
@@ -221,7 +221,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: nginx-gateway
     app.kubernetes.io/name: nginx-gateway
-    app.kubernetes.io/version: edge
+    app.kubernetes.io/version: 2.1.0
   name: nginx-gateway
   namespace: nginx-gateway
 spec:
@@ -241,7 +241,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: nginx-gateway
     app.kubernetes.io/name: nginx-gateway
-    app.kubernetes.io/version: edge
+    app.kubernetes.io/version: 2.1.0
   name: nginx-gateway
   namespace: nginx-gateway
 spec:
@@ -290,9 +290,9 @@ spec:
             fieldRef:
               fieldPath: metadata.labels['app.kubernetes.io/instance']
         - name: IMAGE_NAME
-          value: ghcr.io/nginx/nginx-gateway-fabric:edge
-        image: ghcr.io/nginx/nginx-gateway-fabric:edge
-        imagePullPolicy: Always
+          value: ghcr.io/nginx/nginx-gateway-fabric:2.1.0
+        image: ghcr.io/nginx/nginx-gateway-fabric:2.1.0
+        imagePullPolicy: IfNotPresent
         name: nginx-gateway
         ports:
         - containerPort: 8443
@@ -336,7 +336,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: nginx-gateway
     app.kubernetes.io/name: nginx-gateway
-    app.kubernetes.io/version: edge
+    app.kubernetes.io/version: 2.1.0
   name: nginx-gateway-cert-generator
   namespace: nginx-gateway
 spec:
@@ -356,8 +356,8 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
-        image: ghcr.io/nginx/nginx-gateway-fabric:edge
-        imagePullPolicy: Always
+        image: ghcr.io/nginx/nginx-gateway-fabric:2.1.0
+        imagePullPolicy: IfNotPresent
         name: cert-generator
         securityContext:
           allowPrivilegeEscalation: false
@@ -382,7 +382,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: nginx-gateway
     app.kubernetes.io/name: nginx-gateway
-    app.kubernetes.io/version: edge
+    app.kubernetes.io/version: 2.1.0
   name: nginx
 spec:
   controllerName: gateway.nginx.org/nginx-gateway-controller
@@ -398,7 +398,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: nginx-gateway
     app.kubernetes.io/name: nginx-gateway
-    app.kubernetes.io/version: edge
+    app.kubernetes.io/version: 2.1.0
   name: nginx-gateway-config
   namespace: nginx-gateway
 spec:
@@ -411,7 +411,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: nginx-gateway
     app.kubernetes.io/name: nginx-gateway
-    app.kubernetes.io/version: edge
+    app.kubernetes.io/version: 2.1.0
   name: nginx-gateway-proxy-config
   namespace: nginx-gateway
 spec:
@@ -419,9 +419,9 @@ spec:
     deployment:
       container:
         image:
-          pullPolicy: Always
+          pullPolicy: IfNotPresent
           repository: ghcr.io/nginx/nginx-gateway-fabric/nginx
-          tag: edge
+          tag: 2.1.0
       replicas: 1
     service:
       externalTrafficPolicy: Local
