--- a/deploy/snippets-filters-nginx-plus/deploy.yaml
+++ b/deploy/snippets-filters-nginx-plus/deploy.yaml
@@ -10,7 +10,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: nginx-gateway
     app.kubernetes.io/name: nginx-gateway
-    app.kubernetes.io/version: edge
+    app.kubernetes.io/version: 2.1.0
   name: nginx-gateway
   namespace: nginx-gateway
 ---
@@ -20,7 +20,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: nginx-gateway
     app.kubernetes.io/name: nginx-gateway
-    app.kubernetes.io/version: edge
+    app.kubernetes.io/version: 2.1.0
   name: nginx-gateway-cert-generator
   namespace: nginx-gateway
 ---
@@ -30,7 +30,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: nginx-gateway
     app.kubernetes.io/name: nginx-gateway
-    app.kubernetes.io/version: edge
+    app.kubernetes.io/version: 2.1.0
   name: nginx-gateway-cert-generator
   namespace: nginx-gateway
 rules:
@@ -49,7 +49,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: nginx-gateway
     app.kubernetes.io/name: nginx-gateway
-    app.kubernetes.io/version: edge
+    app.kubernetes.io/version: 2.1.0
   name: nginx-gateway
 rules:
 - apiGroups:
@@ -184,7 +184,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: nginx-gateway
     app.kubernetes.io/name: nginx-gateway
-    app.kubernetes.io/version: edge
+    app.kubernetes.io/version: 2.1.0
   name: nginx-gateway-cert-generator
   namespace: nginx-gateway
 roleRef:
@@ -202,7 +202,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: nginx-gateway
     app.kubernetes.io/name: nginx-gateway
-    app.kubernetes.io/version: edge
+    app.kubernetes.io/version: 2.1.0
   name: nginx-gateway
 roleRef:
   apiGroup: rbac.authorization.k8s.io
@@ -219,7 +219,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: nginx-gateway
     app.kubernetes.io/name: nginx-gateway
-    app.kubernetes.io/version: edge
+    app.kubernetes.io/version: 2.1.0
   name: nginx-gateway
   namespace: nginx-gateway
 spec:
@@ -239,7 +239,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: nginx-gateway
     app.kubernetes.io/name: nginx-gateway
-    app.kubernetes.io/version: edge
+    app.kubernetes.io/version: 2.1.0
   name: nginx-gateway
   namespace: nginx-gateway
 spec:
@@ -291,9 +291,9 @@ spec:
             fieldRef:
               fieldPath: metadata.labels['app.kubernetes.io/instance']
         - name: IMAGE_NAME
-          value: ghcr.io/nginx/nginx-gateway-fabric:edge
-        image: ghcr.io/nginx/nginx-gateway-fabric:edge
-        imagePullPolicy: Always
+          value: ghcr.io/nginx/nginx-gateway-fabric:2.1.0
+        image: ghcr.io/nginx/nginx-gateway-fabric:2.1.0
+        imagePullPolicy: IfNotPresent
         name: nginx-gateway
         ports:
         - containerPort: 8443
@@ -337,7 +337,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: nginx-gateway
     app.kubernetes.io/name: nginx-gateway
-    app.kubernetes.io/version: edge
+    app.kubernetes.io/version: 2.1.0
   name: nginx-gateway-cert-generator
   namespace: nginx-gateway
 spec:
@@ -357,8 +357,8 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
-        image: ghcr.io/nginx/nginx-gateway-fabric:edge
-        imagePullPolicy: Always
+        image: ghcr.io/nginx/nginx-gateway-fabric:2.1.0
+        imagePullPolicy: IfNotPresent
         name: cert-generator
         securityContext:
           allowPrivilegeEscalation: false
@@ -383,7 +383,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: nginx-gateway
     app.kubernetes.io/name: nginx-gateway
-    app.kubernetes.io/version: edge
+    app.kubernetes.io/version: 2.1.0
   name: nginx
 spec:
   controllerName: gateway.nginx.org/nginx-gateway-controller
@@ -399,7 +399,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: nginx-gateway
     app.kubernetes.io/name: nginx-gateway
-    app.kubernetes.io/version: edge
+    app.kubernetes.io/version: 2.1.0
   name: nginx-gateway-config
   namespace: nginx-gateway
 spec:
@@ -412,7 +412,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: nginx-gateway
     app.kubernetes.io/name: nginx-gateway
-    app.kubernetes.io/version: edge
+    app.kubernetes.io/version: 2.1.0
   name: nginx-gateway-proxy-config
   namespace: nginx-gateway
 spec:
@@ -420,9 +420,9 @@ spec:
     deployment:
       container:
         image:
-          pullPolicy: Always
+          pullPolicy: IfNotPresent
           repository: private-registry.nginx.com/nginx-gateway-fabric/nginx-plus
-          tag: edge
+          tag: 2.1.0
       replicas: 1
     service:
       externalTrafficPolicy: Local
