--- a/examples/externalname-service/gateway.yaml
+++ b/examples/externalname-service/gateway.yaml
@@ -33,8 +33,10 @@ metadata:
 spec:
   dnsResolver:
     addresses:
-    - "8.8.8.8"
-    - "1.1.1.1"
+    - type: IPAddress
+      value: "8.8.8.8"
+    - type: IPAddress
+      value: "1.1.1.1"
     timeout: "30s"
     cacheTTL: "60s"
     ipv6: true
