--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,9 +12,11 @@ on:
       tag:
         required: false
         type: string
+        default: ''
       dry_run:
         required: false
         type: boolean
+        default: false
 
 defaults:
   run:
