--- a/config/crd/bases/gateway.nginx.org_nginxproxies.yaml
+++ b/config/crd/bases/gateway.nginx.org_nginxproxies.yaml
@@ -104,9 +104,9 @@ spec:
                     description: CacheTTL specifies how long to cache DNS responses.
                     pattern: ^[0-9]{1,4}(ms|s|m|h)?$
                     type: string
-                  ipv6:
+                  disableIPv6:
                     description: |-
-                      DisableIPv6 disables DisableIPv6 lookups.
+                      DisableIPv6 disables IPv6 lookups.
                       If not specified, or set to false, IPv6 lookups will be enabled.
                     type: boolean
                   timeout:
