--- a/config/cluster/kind-cluster.yaml
+++ b/config/cluster/kind-cluster.yaml
@@ -1,7 +1,8 @@
 kind: Cluster
 apiVersion: kind.x-k8s.io/v1alpha4
-nodes:
-- role: control-plane
+name: kind-ipv6
 networking:
-  ipFamily: dual
-  apiServerAddress: 127.0.0.1
+  ipFamily: ipv6
+  apiServerAddress: "127.0.0.1"
+nodes:
+  - role: control-plane
