--- a/.github/workflows/conformance.yml
+++ b/.github/workflows/conformance.yml
@@ -16,6 +16,10 @@ on:
         required: false
         type: boolean
         default: false
+      release_version:
+        required: false
+        type: string
+        default: ''
 
 defaults:
   run:
@@ -66,6 +70,8 @@ jobs:
             type=edge
             type=schedule
             type=ref,event=pr
+            type=ref,event=branch,suffix=-rc,enable=${{ startsWith(github.ref, 'refs/heads/release') && !inputs.production-release }}
+            type=raw,value={{inputs.release_version}},enable=${{ inputs.production-release && inputs.release_version != '' }}
 
       - name: NGINX Docker meta
         id: nginx-meta
@@ -78,6 +84,8 @@ jobs:
             type=edge
             type=schedule
             type=ref,event=pr
+            type=ref,event=branch,suffix=-rc,enable=${{ startsWith(github.ref, 'refs/heads/release') && !inputs.production-release }}
+            type=raw,value={{inputs.release_version}},enable=${{ inputs.production-release && inputs.release_version != '' }}
 
       - name: Build binary
         uses: goreleaser/goreleaser-action@e435ccd777264be153ace6237001ef4d979d3a7a # v6.4.0
