--- a/.github/workflows/functional.yml
+++ b/.github/workflows/functional.yml
@@ -56,6 +56,7 @@ jobs:
             type=schedule
             type=edge
             type=ref,event=pr
+            type=ref,event=branch,suffix=-rc,enable=${{ startsWith(github.ref, 'refs/heads/release') }}
 
       - name: NGINX Docker meta
         id: nginx-meta
@@ -68,6 +69,7 @@ jobs:
             type=edge
             type=schedule
             type=ref,event=pr
+            type=ref,event=branch,suffix=-rc,enable=${{ startsWith(github.ref, 'refs/heads/release') }}
 
       - name: Build binary
         uses: goreleaser/goreleaser-action@e435ccd777264be153ace6237001ef4d979d3a7a # v6.4.0
