--- a/tests/Makefile
+++ b/tests/Makefile
@@ -176,7 +176,7 @@ HELM_PARAMETERS += --set nginxGateway.name=nginx-gateway --set nginx.service.typ
 # it overrides the target in the main Makefile when the GW_API_VERSION is set to main
 ifeq ($(GW_API_VERSION),main)
 install-gateway-crds:
-	kubectl kustomize "https://github.com/kubernetes-sigs/gateway-api/config/crd/$(if $(filter true,$(ENABLE_EXPERIMENTAL)),experimental,)?timeout=120&ref=main" | kubectl apply -f -
+	kubectl kustomize "https://github.com/kubernetes-sigs/gateway-api/config/crd/$(if $(filter true,$(ENABLE_EXPERIMENTAL)),experimental,)?timeout=120&ref=main" | kubectl apply --server-side -f -
 endif
 
 .PHONY: install-ngf-local-no-build
