--- a/.github/workflows/renovate-build.yml
+++ b/.github/workflows/renovate-build.yml
@@ -12,7 +12,7 @@ defaults:
     shell: bash
 
 env:
-  GOPROXY: ${{ github.repository_owner == 'nginx' && format('https://{0}:{1}@{2}', secrets.ARTIFACTORY_USER, secrets.ARTIFACTORY_TOKEN, secrets.ARTIFACTORY_DEV_ENDPOINT) || 'direct' }}
+  GOPROXY: ${{ github.repository_owner != 'nginx' && 'direct' || format('https://{0}:{1}@{2}', secrets.ARTIFACTORY_USER, secrets.ARTIFACTORY_TOKEN, secrets.ARTIFACTORY_DEV_ENDPOINT) }}
 
 concurrency:
   group: ${{ github.ref_name }}-renovate
