--- a/config/cluster/kind-ipv6-only.yaml
+++ b/config/cluster/kind-ipv6-only.yaml
@@ -1,7 +1,7 @@
 kind: Cluster
 apiVersion: kind.x-k8s.io/v1alpha4
-networking:
-  ipFamily: ipv6 # Explicitly set the cluster to use IPv6
-  disableDefaultCNI: false # Use Kind's default CNI
 nodes:
 - role: control-plane
+networking:
+  ipFamily: ipv6
+  apiServerAddress: "::1"
